fixed right spacing and added link for how to use

--- a/src/SearchGenerator.module.css
+++ b/src/SearchGenerator.module.css
@@ -1,15 +1,16 @@
 .Header{
-    width:100%;
-    height:5vh;
+    width:100vw;
+    height:8vh;
     background-color: #282626;
-    width: 100%;
     color: #fff;
     text-align: right;
-    font-size: clamp(2rem, 0.4063rem + 2.6389vw, 2.1875rem);
+    font-size: clamp(2rem, 0.4063rem + 2.6389vw, 2.4rem);
     font-family: Helvetica, sans-serif;
     font-weight: 300;
-    padding: 1%;
-    padding-right: 15%;
+    padding-right: 8%;
+    padding-top: 1.25%;
+    padding-bottom: 3%;
+    box-sizing: border-box;
 }
 
 .Heading {
@@ -232,5 +233,27 @@
     text-decoration: none;
     cursor: pointer;
 }
-
+a:link {
+    color: white;
+    background-color: transparent;
+    text-decoration: none;
+  }
+  
+  a:visited {
+    color: white;
+    background-color: transparent;
+    text-decoration: none;
+  }
+  
+  a:hover {
+    color: white;
+    background-color: transparent;
+    text-decoration: none;
+  }
+  
+  a:active {
+    color: white;
+    background-color: transparent;
+    text-decoration: none;
+  }
 
